# trading-pattern

./: README.md  pyproject.toml
docs/: adding_features.md
scripts/: make_chart.py
src/txf_mcp/: constants.py
src/txf_mcp/data/: cleaner.py  downloader.py  loader.py  session.py
src/txf_mcp/features/: base.py  registry.py
src/txf_mcp/features/patterns/: deep_pit.py  high_point.py  low_point.py
src/txf_mcp/klines/: ohlcv_json.py  resampler.py
tests/: test_cleaner.py  test_constants.py  test_downloader.py  test_loader.py  test_ohlcv_json.py  test_patterns.py  test_registry.py  test_resampler.py  test_session.py
